--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,15 +17,18 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Install Poetry
+        run: |
+          pip install poetry
+          poetry config virtualenvs.inProject true
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest pytest-asyncio pytest-cov
-          pip install -e .
+          poetry install
 
       - name: Run tests
         run: |
-          pytest src/tests/ -v --cov=src/clawtrust --cov-report=xml --cov-report=term
+          poetry run pytest src/tests/ -v --cov=src/clawtrust/sdk --cov-report=xml --cov-report=term
 
       - name: Upload coverage
         if: matrix.python-version == '3.12'
