--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,6 @@ pydantic = "^2.5.0"
 pyyaml = "^6.0"
 requests = "^2.31.0"
 python-dotenv = "^1.0.0"
-fastapi = "^0.109.0"
-uvicorn = "^0.27.0"
 httpx = "^0.26.0"
 pytest = "^8.0.0"
 pytest-asyncio = "^0.23.0"
@@ -45,3 +43,4 @@ python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
+ignore_missing_imports = true
