--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,8 @@ name: Tests
 on: [push, pull_request]
 
 jobs:
-  test:
+  smoke-test:
+    name: smoke-test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
