--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "src/trustyclaw"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 solana = "^0.35"
+spl-token = "^0.5.0"
 pydantic = "^2.5.0"
 pyyaml = "^6.0"
 requests = "^2.31.0"
